# qa_guru_homework

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml  test.yml
app/: main.py
app/database/: engine.py  users.py
app/models/: User.py
app/routers/: status.py  users.py
tests/: conftest.py  test_api.py  test_errors.py  test_pagination.py  test_smoke.py
