[project]
name = "qa_guru_homework"
version = "0.1.0"
description = ""
authors = [
    {name = "daniil",email = "dt.bedrin@interfax.ru"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "sqlmodel (>=0.0.27,<0.0.28)",
    "fastapi[standard] (>=0.121.0,<0.122.0)",
    "fastapi-pagination (>=0.15.0,<0.16.0)",
    "uvicorn (>=0.38.0,<0.39.0)"
]


[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
